Fixing colors on mobile

--- a/css/agency.css
+++ b/css/agency.css
@@ -85,22 +85,24 @@ body {
 */
 
 #mainNav {
-  background-color: ; }
+  background-color: #1a293e; }
   #mainNav .navbar-toggler {
     font-size: 12px;
     right: 0;
     padding: 13px;
     text-transform: uppercase;
-    color: #1a293e;
+    color: white;
     border: 0;
     background-color: #46a47f;
     font-family: 'Montserrat', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    text-transform: uppercase; }
+ }
   #mainNav .navbar-brand {
     color: #46a47f;
-    font-family: 'Kaushan Script', 'Helvetica Neue', Helvetica, Arial, cursive; }
+    font-family: 'Kaushan Script', 'Helvetica Neue', Helvetica, Arial, cursive; 
+    text-transform: uppercase;}
     #mainNav .navbar-brand.active, #mainNav .navbar-brand:active, #mainNav .navbar-brand:focus, #mainNav .navbar-brand:hover {
-      color: white; }
+      color: white;
+      }
   #mainNav .navbar-nav .nav-item .nav-link {
     font-size: 90%;
     font-weight: 400;
